fix: update execution counts and add data cleaning

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 319,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 320,
    "id": "4ab7913b",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 321,
+   "id": "e42f4dad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 321,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for missing values\n",
+    "data_set.isnull().sum()\n",
+    "\n",
+    "# Check for duplicates\n",
+    "data_set.duplicated().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
    "id": "20097974",
    "metadata": {},
    "outputs": [
@@ -137,7 +162,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,21 +174,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 323,
    "id": "d4e70574",
    "metadata": {},
    "outputs": [],
    "source": [
     "# clean and standardize casing\n",
     "data_set['Mortality_Status'] = data_set['Mortality_Status'].str.strip().str.capitalize()\n",
+    "data_set['Sex'] = data_set['Sex'].str.strip().str.capitalize()\n",
+    "\n",
     "\n",
     "# encode: Alive = 0, Dead = 1\n",
-    "data_set['Mortality_Status'] = data_set['Mortality_Status'].map({'Alive': 0, 'Dead': 1})\n"
+    "data_set['Mortality_Status'] = data_set['Mortality_Status'].map({'Alive': 0, 'Dead': 1})\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 324,
    "id": "ae331dcc",
    "metadata": {},
    "outputs": [],
@@ -176,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 325,
    "id": "433bc170",
    "metadata": {},
    "outputs": [
@@ -207,7 +235,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 326,
    "id": "0b52663a",
    "metadata": {},
    "outputs": [],
@@ -229,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 327,
    "id": "03f04b9b",
    "metadata": {},
    "outputs": [
@@ -298,7 +326,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 329,
    "id": "dc3c207d",
    "metadata": {},
    "outputs": [
