feat: add data preprocessing steps

--- a/breast_cancer_classification_modeling.ipynb
+++ b/breast_cancer_classification_modeling.ipynb
@@ -12,6 +12,25 @@
     "# reading cleaned data\n",
     "data = pd.read_csv('./classification_data_cleaned.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "efa5d9b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = data.drop(columns=[\"Mortality_Status\"])\n",
+    "y = data[\"Mortality_Status\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89eacbb2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
