--- a/breast_cancer_classification_modeling.ipynb
+++ b/breast_cancer_classification_modeling.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "efa5d9b1",
    "metadata": {},
    "outputs": [],
@@ -26,11 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "89eacbb2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# split 80% for trainning , 20% for testing\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.2, stratify=y, random_state=42\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
