feat: add model evaluation and comparison

--- a/breast_cancer_classification_modeling.ipynb
+++ b/breast_cancer_classification_modeling.ipynb
@@ -1575,17 +1575,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "146529da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Model  Accuracy  Precision    Recall  F1-Score       AUC\n",
+      "0  Logistic Regression  0.855901   0.640000  0.130081  0.216216  0.721956\n",
+      "1  K-Nearest Neighbors  0.826087   0.282051  0.089431  0.135802  0.617970\n",
+      "2          Naive Bayes  0.159006   0.153750  1.000000  0.266522  0.503666\n"
+     ]
+    }
+   ],
    "source": [
-    "# model comparison"
+    "# model comparison\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "\n",
+    "def evaluate_model(name, model, x_test, y_test):\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    y_proba = model.predict_proba(x_test)[:, 1]\n",
+    "    return {\n",
+    "        \"Model\": name,\n",
+    "        \"Accuracy\": accuracy_score(y_test, y_pred),\n",
+    "        \"Precision\": precision_score(y_test, y_pred),\n",
+    "        \"Recall\": recall_score(y_test, y_pred),\n",
+    "        \"F1-Score\": f1_score(y_test, y_pred),\n",
+    "        \"AUC\": roc_auc_score(y_test, y_proba)\n",
+    "    }\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "results.append(evaluate_model(\"Logistic Regression\", lr_model, x_test, y_test))\n",
+    "results.append(evaluate_model(\"K-Nearest Neighbors\", knn_model, x_test, y_test))\n",
+    "results.append(evaluate_model(\"Naive Bayes\", nb_model, x_test, y_test))\n",
+    "\n",
+    "import pandas as pd\n",
+    "results_df = pd.DataFrame(results)\n",
+    "print(results_df.sort_values(by=\"AUC\", ascending=False))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "463d25de",
    "metadata": {},
    "outputs": [
@@ -1819,6 +1853,7 @@
     }
    ],
    "source": [
+    "# Hyper parameter tunning\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
