feat: add classification report and auc score

--- a/ensemble_classification_regression.ipynb
+++ b/ensemble_classification_regression.ipynb
@@ -528,6 +528,42 @@
     "\n",
     "voting_clf.fit(x_train_clf_scaled, y_train_clf)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ddec0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.86      0.98      0.92       682\n",
+      "           1       0.61      0.14      0.23       123\n",
+      "\n",
+      "    accuracy                           0.85       805\n",
+      "   macro avg       0.74      0.56      0.57       805\n",
+      "weighted avg       0.82      0.85      0.81       805\n",
+      "\n",
+      "AUC Score: 0.6986624704956728\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report, roc_auc_score\n",
+    "\n",
+    "\n",
+    "\n",
+    "y_pred = voting_clf.predict(x_test_clf_scaled)\n",
+    "y_probs = voting_clf.predict_proba(x_test_clf_scaled)[:, 1]\n",
+    "\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test_clf, y_pred))\n",
+    "print(\"AUC Score:\", roc_auc_score(y_test_clf, y_probs))\n"
+   ]
   }
  ],
  "metadata": {
