refractor: cleaned the code base

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 1,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 2,
    "id": "4ab7913b",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 3,
    "id": "e42f4dad",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "0"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 4,
    "id": "20097974",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 5,
    "id": "d4e70574",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 6,
    "id": "ae331dcc",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 7,
    "id": "433bc170",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 8,
    "id": "0b52663a",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 9,
    "id": "03f04b9b",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 10,
    "id": "dc3c207d",
    "metadata": {},
    "outputs": [
@@ -346,8 +346,7 @@
      "output_type": "stream",
      "text": [
       "Classification Dataset Shape: (4024, 57)\n",
-      "Regression Dataset Shape (Dead): (616, 58)\n",
-      "Regression Dataset Shape (Alive): (3408, 58)\n"
+      "Regression Dataset Shape (Dead): (616, 58)\n"
      ]
     }
    ],
@@ -356,18 +355,16 @@
     "classification_data_set = data_set.drop(columns=['Patient_ID', 'Survival_Months']).dropna(subset=['Mortality_Status'])\n",
     "\n",
     "# Filter the data for regression tasks (dead and alive patients)\n",
-    "regression_data_set_dead = data_set[data_set['Mortality_Status'] == 1].drop(columns=['Patient_ID'])\n",
-    "regression_data_set_alive = data_set[data_set['Mortality_Status'] == 0].drop(columns=['Patient_ID'])\n",
+    "regression_data_set = data_set[data_set['Mortality_Status'] == 1].drop(columns=['Patient_ID'])\n",
+    "\n",
     "\n",
     "# Save cleaned datasets to CSV\n",
     "classification_data_set.to_csv('classification_data_cleaned.csv', index=False)\n",
-    "regression_data_set_dead.to_csv('regression_data_cleaned_dead.csv', index=False)\n",
-    "regression_data_set_alive.to_csv('regression_data_cleaned_alive.csv', index=False)\n",
+    "regression_data_set.to_csv('regression_data_cleaned.csv', index=False)\n",
     "\n",
     "# Print dataset shapes for confirmation\n",
     "print(\"Classification Dataset Shape:\", classification_data_set.shape)\n",
-    "print(\"Regression Dataset Shape (Dead):\", regression_data_set_dead.shape)\n",
-    "print(\"Regression Dataset Shape (Alive):\", regression_data_set_alive.shape)\n"
+    "print(\"Regression Dataset Shape (Dead):\", regression_data_set.shape)\n"
    ]
   }
  ],
