feat: drop the Month_of_Birth

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "4ab7913b",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "e42f4dad",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "20097974",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "d4e70574",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "ae331dcc",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "433bc170",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,6 @@
      "data": {
       "text/plain": [
        "Patient_ID                       object\n",
-       "Month_of_Birth                    int64\n",
        "Age                             float64\n",
        "Occupation                       object\n",
        "6th_Stage                        object\n",
@@ -235,19 +234,22 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_set.head()\n",
+    "# dropping the month of birth column\n",
+    "data_set = data_set.drop(columns=['Month_of_Birth'])\n",
+    "\n",
     "data_set.dtypes\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "0b52663a",
    "metadata": {},
    "outputs": [],
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "03f04b9b",
    "metadata": {},
    "outputs": [
@@ -265,7 +267,6 @@
      "data": {
       "text/plain": [
        "Patient_ID                       object\n",
-       "Month_of_Birth                    int64\n",
        "Age                             float64\n",
        "6th_Stage                        object\n",
        "Differentiated                   object\n",
@@ -326,7 +327,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "dc3c207d",
    "metadata": {},
    "outputs": [
@@ -345,8 +346,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Classification Dataset Shape: (4024, 57)\n",
-      "Regression Dataset Shape (Dead): (616, 58)\n"
+      "Classification Dataset Shape: (4024, 56)\n",
+      "Regression Dataset Shape (Dead): (616, 57)\n"
      ]
     }
    ],
