feat: update breast_cancer notebook with execution count and data cleaning

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 590,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "4                      1               50            Alive  "
       ]
      },
-     "execution_count": 371,
+     "execution_count": 590,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,19 +200,12 @@
     "data_set = pd.read_csv('./dataset-breast-cancer.csv')\n",
     "\n",
     "# preview the dataset\n",
-    "data_set.head()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "data_set.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 591,
    "id": "ea43ac89",
    "metadata": {},
    "outputs": [
@@ -255,7 +248,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 592,
+   "id": "e5e226df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                       float64\n",
+       "T_Stage                    object\n",
+       "N_Stage                    object\n",
+       "6th_Stage                  object\n",
+       "Differentiated             object\n",
+       "Grade                       int64\n",
+       "A_Stage                    object\n",
+       "Tumor_Size                float64\n",
+       "Estrogen_Status            object\n",
+       "Progesterone_Status        object\n",
+       "Regional_Node_Examined    float64\n",
+       "Reginol_Node_Positive       int64\n",
+       "Survival_Months             int64\n",
+       "Mortality_Status           object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 592,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dropping the month of birth column\n",
+    "data_set = data_set.drop(columns=['Patient_ID','Month_of_Birth','Sex','Occupation'])\n",
+    "\n",
+    "data_set.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 593,
    "id": "a63da12e",
    "metadata": {},
    "outputs": [
@@ -263,83 +294,151 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Patient_ID  Month_of_Birth          Age     Sex    Occupation T_Stage  \\\n",
-      "count        4024     4024.000000  4015.000000    4020            43    4024   \n",
-      "unique       4024             NaN          NaN       2            40       4   \n",
-      "top         A0012             NaN          NaN  Female  House Person      T2   \n",
-      "freq            1             NaN          NaN    4001             2    1786   \n",
-      "mean          NaN        6.481362    54.107098     NaN           NaN     NaN   \n",
-      "std           NaN        3.475442    11.715528     NaN           NaN     NaN   \n",
-      "min           NaN        1.000000   -50.000000     NaN           NaN     NaN   \n",
-      "25%           NaN        3.000000    47.000000     NaN           NaN     NaN   \n",
-      "50%           NaN        6.000000    54.000000     NaN           NaN     NaN   \n",
-      "75%           NaN       10.000000    61.000000     NaN           NaN     NaN   \n",
-      "max           NaN       12.000000   502.000000     NaN           NaN     NaN   \n",
+      "               Age        Grade   Tumor_Size  Regional_Node_Examined  \\\n",
+      "count  4015.000000  4024.000000  4021.000000             4023.000000   \n",
+      "mean     54.107098     2.150596    30.419299               14.373602   \n",
+      "std      11.715528     0.638234    21.161080                8.129293   \n",
+      "min     -50.000000     1.000000   -75.000000                1.000000   \n",
+      "25%      47.000000     2.000000    16.000000                9.000000   \n",
+      "50%      54.000000     2.000000    25.000000               14.000000   \n",
+      "75%      61.000000     3.000000    38.000000               19.000000   \n",
+      "max     502.000000     4.000000   140.000000               61.000000   \n",
       "\n",
-      "       N_Stage 6th_Stage             Differentiated        Grade   A_Stage  \\\n",
-      "count     4024      4024                       4024  4024.000000      4024   \n",
-      "unique       3         5                          4          NaN         2   \n",
-      "top         N1       IIA  Moderately differentiated          NaN  Regional   \n",
-      "freq      2732      1305                       2351          NaN      3932   \n",
-      "mean       NaN       NaN                        NaN     2.150596       NaN   \n",
-      "std        NaN       NaN                        NaN     0.638234       NaN   \n",
-      "min        NaN       NaN                        NaN     1.000000       NaN   \n",
-      "25%        NaN       NaN                        NaN     2.000000       NaN   \n",
-      "50%        NaN       NaN                        NaN     2.000000       NaN   \n",
-      "75%        NaN       NaN                        NaN     3.000000       NaN   \n",
-      "max        NaN       NaN                        NaN     4.000000       NaN   \n",
-      "\n",
-      "         Tumor_Size Estrogen_Status Progesterone_Status  \\\n",
-      "count   4021.000000            4024                4024   \n",
-      "unique          NaN               2                   2   \n",
-      "top             NaN        Positive            Positive   \n",
-      "freq            NaN            3755                3326   \n",
-      "mean      30.419299             NaN                 NaN   \n",
-      "std       21.161080             NaN                 NaN   \n",
-      "min      -75.000000             NaN                 NaN   \n",
-      "25%       16.000000             NaN                 NaN   \n",
-      "50%       25.000000             NaN                 NaN   \n",
-      "75%       38.000000             NaN                 NaN   \n",
-      "max      140.000000             NaN                 NaN   \n",
-      "\n",
-      "        Regional_Node_Examined  Reginol_Node_Positive  Survival_Months  \\\n",
-      "count              4023.000000            4024.000000      4024.000000   \n",
-      "unique                     NaN                    NaN              NaN   \n",
-      "top                        NaN                    NaN              NaN   \n",
-      "freq                       NaN                    NaN              NaN   \n",
-      "mean                 14.373602               4.158052        71.472167   \n",
-      "std                   8.129293               5.109331        25.361855   \n",
-      "min                   1.000000               1.000000         1.000000   \n",
-      "25%                   9.000000               1.000000        56.000000   \n",
-      "50%                  14.000000               2.000000        73.000000   \n",
-      "75%                  19.000000               5.000000        90.000000   \n",
-      "max                  61.000000              46.000000       760.000000   \n",
-      "\n",
-      "       Mortality_Status  \n",
-      "count              4024  \n",
-      "unique                7  \n",
-      "top               Alive  \n",
-      "freq               3399  \n",
-      "mean                NaN  \n",
-      "std                 NaN  \n",
-      "min                 NaN  \n",
-      "25%                 NaN  \n",
-      "50%                 NaN  \n",
-      "75%                 NaN  \n",
-      "max                 NaN  \n"
+      "       Reginol_Node_Positive  Survival_Months  \n",
+      "count            4024.000000      4024.000000  \n",
+      "mean                4.158052        71.472167  \n",
+      "std                 5.109331        25.361855  \n",
+      "min                 1.000000         1.000000  \n",
+      "25%                 1.000000        56.000000  \n",
+      "50%                 2.000000        73.000000  \n",
+      "75%                 5.000000        90.000000  \n",
+      "max                46.000000       760.000000  \n"
      ]
     }
    ],
    "source": [
     "# summary of data\n",
-    "descriptive_stats = data_set.describe(include=\"all\")\n",
+    "descriptive_stats = data_set.describe()\n",
     "print(descriptive_stats)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 594,
+   "id": "22bb6a53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                       9\n",
+       "T_Stage                   0\n",
+       "N_Stage                   0\n",
+       "6th_Stage                 0\n",
+       "Differentiated            0\n",
+       "Grade                     0\n",
+       "A_Stage                   0\n",
+       "Tumor_Size                3\n",
+       "Estrogen_Status           0\n",
+       "Progesterone_Status       0\n",
+       "Regional_Node_Examined    1\n",
+       "Reginol_Node_Positive     0\n",
+       "Survival_Months           0\n",
+       "Mortality_Status          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 594,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# counting missing data\n",
+    "data_set.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
+   "id": "5fe836e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 595,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for duplicates\n",
+    "data_set.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 596,
+   "id": "57342872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "# List of columns you want to impute\n",
+    "columns_to_impute = ['Age', 'Tumor_Size', 'Regional_Node_Examined']\n",
+    "\n",
+    "# Create the imputer with mean strategy\n",
+    "mean_imputer = SimpleImputer(strategy='mean')\n",
+    "\n",
+    "# Apply imputation to the selected columns\n",
+    "data_set[columns_to_impute] = mean_imputer.fit_transform(data_set[columns_to_impute])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9494d111",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age                       0\n",
+       "T_Stage                   0\n",
+       "N_Stage                   0\n",
+       "6th_Stage                 0\n",
+       "Differentiated            0\n",
+       "Grade                     0\n",
+       "A_Stage                   0\n",
+       "Tumor_Size                0\n",
+       "Estrogen_Status           0\n",
+       "Progesterone_Status       0\n",
+       "Regional_Node_Examined    0\n",
+       "Reginol_Node_Positive     0\n",
+       "Survival_Months           0\n",
+       "Mortality_Status          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 597,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ensure the imputatation\n",
+    "data_set.isnull().sum()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 598,
    "id": "f9bfd8b0",
    "metadata": {},
    "outputs": [
@@ -347,7 +446,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset Shape: (4024, 18)\n"
+      "Dataset Shape: (4024, 14)\n"
      ]
     }
    ],
@@ -358,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 599,
    "id": "805dfb57",
    "metadata": {},
    "outputs": [
@@ -9311,7 +9410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 600,
    "id": "4ab7913b",
    "metadata": {},
    "outputs": [
@@ -9344,53 +9443,19 @@
     "# view unique values in target variables\n",
     "print(data_set['Mortality_Status'].value_counts())\n",
     "\n",
-    "print(data_set['Survival_Months'].describe())\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(data_set['Survival_Months'].describe())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
-   "id": "e42f4dad",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 377,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check for missing values\n",
-    "data_set.isnull().sum()\n",
-    "\n",
-    "# Check for duplicates\n",
-    "data_set.duplicated().sum()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 601,
    "id": "20097974",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Patient_ID                 object\n",
-       "Month_of_Birth              int64\n",
        "Age                       float64\n",
-       "Sex                        object\n",
-       "Occupation                 object\n",
        "T_Stage                    object\n",
        "N_Stage                    object\n",
        "6th_Stage                  object\n",
@@ -9407,7 +9472,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 601,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9419,7 +9484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 602,
    "id": "d4e70574",
    "metadata": {},
    "outputs": [
@@ -9444,7 +9509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 603,
    "id": "c924ed93",
    "metadata": {},
    "outputs": [],
@@ -9455,7 +9520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 604,
    "id": "ae331dcc",
    "metadata": {},
    "outputs": [],
@@ -9468,57 +9533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
-   "id": "433bc170",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Patient_ID                       object\n",
-       "Age                             float64\n",
-       "6th_Stage                        object\n",
-       "Differentiated                   object\n",
-       "Grade                             int64\n",
-       "A_Stage                          object\n",
-       "Tumor_Size                      float64\n",
-       "Regional_Node_Examined          float64\n",
-       "Reginol_Node_Positive             int64\n",
-       "Survival_Months                   int64\n",
-       "Mortality_Status                  int64\n",
-       "T_Stage_T2                         bool\n",
-       "T_Stage_T3                         bool\n",
-       "T_Stage_T4                         bool\n",
-       "N_Stage_N2                         bool\n",
-       "N_Stage_N3                         bool\n",
-       "Estrogen_Status_Positive           bool\n",
-       "Progesterone_Status_Positive       bool\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 382,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_set.head()\n",
-    "# dropping the month of birth column\n",
-    "data_set = data_set.drop(columns=['Month_of_Birth','Sex','Occupation'])\n",
-    "\n",
-    "data_set.dtypes\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 605,
    "id": "03f04b9b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Patient_ID                       object\n",
        "Age                             float64\n",
        "6th_Stage                        object\n",
        "Differentiated                   object\n",
@@ -9539,7 +9560,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 605,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9550,7 +9571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 606,
    "id": "dc3c207d",
    "metadata": {},
    "outputs": [
@@ -9565,10 +9586,10 @@
    ],
    "source": [
     "# Drop irrelevant columns for classification and handle missing target\n",
-    "classification_data_set = data_set.drop(columns=['Patient_ID', 'Survival_Months']).dropna(subset=['Mortality_Status'])\n",
+    "classification_data_set = data_set.drop(columns=[ 'Survival_Months']).dropna(subset=['Mortality_Status'])\n",
     "\n",
     "# Filter the data for regression tasks (dead and alive patients)\n",
-    "regression_data_set = data_set[data_set['Mortality_Status'] == 1].drop(columns=['Patient_ID'])\n",
+    "regression_data_set = data_set[data_set['Mortality_Status'] == 1]\n",
     "\n",
     "\n",
     "# Save cleaned datasets to CSV\n",
