fix: update execution counts in breast_cancer.ipynb

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 623,
    "id": "f70da631",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "4                      1               50            Alive  "
       ]
      },
-     "execution_count": 590,
+     "execution_count": 623,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 624,
    "id": "ea43ac89",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 625,
    "id": "e5e226df",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 592,
+     "execution_count": 625,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 626,
    "id": "a63da12e",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 627,
    "id": "22bb6a53",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 594,
+     "execution_count": 627,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 628,
    "id": "5fe836e1",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
        "1"
       ]
      },
-     "execution_count": 595,
+     "execution_count": 628,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,27 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 596,
-   "id": "57342872",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.impute import SimpleImputer\n",
-    "\n",
-    "# List of columns you want to impute\n",
-    "columns_to_impute = ['Age', 'Tumor_Size', 'Regional_Node_Examined']\n",
-    "\n",
-    "# Create the imputer with mean strategy\n",
-    "mean_imputer = SimpleImputer(strategy='mean')\n",
-    "\n",
-    "# Apply imputation to the selected columns\n",
-    "data_set[columns_to_impute] = mean_imputer.fit_transform(data_set[columns_to_impute])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "9494d111",
+   "id": "57342872",
    "metadata": {},
    "outputs": [
     {
@@ -426,19 +407,39 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 597,
+     "execution_count": 629,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "# list of columns\n",
+    "columns_to_impute = ['Age', 'Tumor_Size', 'Regional_Node_Examined']\n",
+    "\n",
+    "# create the imputer\n",
+    "mean_imputer = SimpleImputer(strategy='mean')\n",
+    "\n",
+    "# apply imputation to the selected columns\n",
+    "data_set[columns_to_impute] = mean_imputer.fit_transform(data_set[columns_to_impute])\n",
+    "\n",
     "# ensure the imputatation\n",
     "data_set.isnull().sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": null,
+   "id": "9494d111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 630,
    "id": "f9bfd8b0",
    "metadata": {},
    "outputs": [
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 631,
    "id": "805dfb57",
    "metadata": {},
    "outputs": [
@@ -9410,7 +9411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 600,
+   "execution_count": 632,
    "id": "4ab7913b",
    "metadata": {},
    "outputs": [
@@ -9448,7 +9449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 633,
    "id": "20097974",
    "metadata": {},
    "outputs": [
@@ -9472,7 +9473,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 633,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9484,7 +9485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 634,
    "id": "d4e70574",
    "metadata": {},
    "outputs": [
@@ -9509,7 +9510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 603,
+   "execution_count": 635,
    "id": "c924ed93",
    "metadata": {},
    "outputs": [],
@@ -9520,7 +9521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 604,
+   "execution_count": 636,
    "id": "ae331dcc",
    "metadata": {},
    "outputs": [],
@@ -9533,7 +9534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 605,
+   "execution_count": 637,
    "id": "03f04b9b",
    "metadata": {},
    "outputs": [
@@ -9560,7 +9561,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 605,
+     "execution_count": 637,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9571,7 +9572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 606,
+   "execution_count": 638,
    "id": "dc3c207d",
    "metadata": {},
    "outputs": [
