feat: update data loading for notebooks

--- a/Final_Notebook3_20221914_w2052278.ipynb
+++ b/Final_Notebook3_20221914_w2052278.ipynb
@@ -12,8 +12,7 @@
     "# classification dataset for voting ensemble\n",
     "classification_data = pd.read_csv(\"./classification_data_cleaned.csv\")\n",
     "# regression dataset for decision tree models \n",
-    "regression_data = pd.read_csv(\"./regression_data_cleaned.csv\")\n",
-    "\n"
+    "regression_data = pd.read_csv(\"./regression_data_cleaned.csv\")\n"
    ]
   },
   {
